# deploy-tool

./: .env.example  .gitignore  README.md  functional_requirements.ipynb
backend/: .env.example  README.md  backend_requirements.ipynb  pyproject.toml
backend/app/: __init__.py  config.py  main.py  models.py
backend/app/routers/: branches.py  credentials.py  deploy.py  status.py  websocket.py
backend/app/services/: credential_manager.py  deployer.py  eta_manager.py  log_streamer.py  repo_manager.py  token_manager.py
backend/app/utils/: __init__.py  validation.py
backend/tests/: test_credential_management.py  test_validation.py
frontend/: README.md  frontend_requirements.ipynb  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: BranchDropdown.tsx  DeployButton.tsx  FilerIPInput.tsx  LogViewer.tsx  RepoSelector.tsx  StatusIndicator.tsx  TokenModal.tsx
frontend/src/hooks/: useBranches.ts  useDeploy.ts  useQueryParams.ts  useWebSocket.ts
frontend/src/types/: index.ts
